# AgricolaBot

./: .dockerignore  .gitignore  ACTION_REPLACEMENT_DESIGN.md  ARCHITECTURE.md  ARTIFEX_CATEGORIZATION.md  BUBULCUS_CATEGORIZATION.md  CARD_AUTHORING_GUIDE.md  CARD_BATCH_AB_SUMMARY.md  CARD_BATCH_TRIAGE.md  CARD_DEFERRED_PLANS.md  CARD_ENGINE_IMPLEMENTATION.md  CARD_IMPLEMENTATION_PLAN.md  CARD_IMPLEMENTATION_PROGRESS.md  CARD_SYSTEM_DESIGN.md  CENSUS_COST_IMPOSITION.md  CENSUS_REACTIVE_TRIGGERS.md  CHANGES.md  CLAUDE.md  CLEANUP.md  CLOUD_RUNBOOK.md  COMPENDIUM_DIFFS_REPORT.md  COST_MODIFIER_DESIGN.md  CPP_ENGINE_PLAN.md  DEPLOY.md  DIRECTORY.md  Dockerfile  ENGINE_IMPLEMENTATION.md  FILE_DESCRIPTIONS.md  FIRST_NN.md  FOOD_PAYMENT_DESIGN.md  FRONTEND_FIXES.md  FRONTIER_OPT_DESIGN.md  HARVEST_HANDOFF.md  HEURISTIC_TUNING_PLAN.md  HIDDEN_INFO_DESIGN.md  HUBRIS_V1_NOTES.md  IMPLEMENTATION_CHOICES.md  INCREMENTAL_PASTURE_DESIGN.md  LEGALITY_HARD_CASES.md  MCTS_DESIGN.md  (+37 more)
.claude/: settings.local.json
_cloud_spatial/: encode_shard.sh  eval_job.sh  launch_encode.sh  launch_train.sh  train_spatial.sh  trained_models_MANIFEST.md
agricola/: actions.py  canonical.py  constants.py  cost.py  engine.py  environment.py  fence_universe.py  fences.py  helpers.py  legality.py  opt_config.py  pasture.py  pending.py  replace.py  resolution.py  resources.py  scoring.py  setup.py  state.py
archive/: TESTS.md
cpp/: CMakeLists.txt  README.md
cpp/apps/: selfplay.cpp
cpp/bindings/: pybind_module.cpp
cpp/include/agricola/: actions.hpp  canonical.hpp  constants.hpp  encoder.hpp  engine.hpp  fences.hpp  hash.hpp  helpers.hpp  legality.hpp  mcts.hpp  mlp.hpp  nn.hpp  pasture.hpp  resolution.hpp  scoring.hpp  selfplay.hpp  setup.hpp  state_ops.hpp  types.hpp  version.hpp
cpp/src/: action_canonical.cpp  canonical.cpp  constants.cpp  encoder.cpp  engine.cpp  fence_universe_data.cpp  fences.cpp  hash.cpp  helpers.cpp  legality.cpp  mcts.cpp  mlp.cpp  nn.cpp  pasture.cpp  resolution.cpp  scoring.cpp  selfplay.cpp  setup.cpp  version.cpp
design_docs/: FIRST_NN.md  HIDDEN_INFO_DESIGN.md  POLICY_HEAD.md  V3_TRAINING_PIPELINE.md
nn_models/: REGISTRY.md  best.meta.json  best.pt  cpp_export_best
nn_runs/: overnight_pipeline.sh
scratch_audit/: AUDIT_V2_FINDINGS.md  AUDIT_V2_TRIAGE.md  audit_tiers.json  audit_v2_result.json  card-ordering-audit.js  card-rule-audit-v2.js
scripts/: _unimplemented_cards.py  analyze_tournament.py  bench_encoding_collisions.py  bench_replace.py  bench_shared_tree.py  bench_stop_is_legal.py  card_fuzz_test.py  card_text.py  card_workbook.py  cloud_cuct_sweep.sh  cloud_remote_sweep.sh  cloud_sweep_status.sh  count_replaces.py  eval_search_vs_ensemble.py  extract_card_data.py  generate_nn_training_data.py  list_unimplemented_minors.py  list_unimplemented_occupations.py  mcts_sweep.py  measure_exhaustive_leaves.py  measure_mcts_tree.py  measure_v3_prior_distribution.py  play_match.py  play_mcts_match.py  play_mcts_v1_vs_v1heur.py  play_mcts_v1_vs_v3.py  port_pre_refactor_v3.py  profile_engine.py  profile_frontier_helpers.py  profile_mcts_nn.py  profile_states.py  proto_jit_trace.py  reconcile_wontfix.py  replay_analyze_sweep.py  replay_regret_sweep.py  replay_seed_variation.py  replay_snowball_anatomy.py  run_exhaustive_vs_greedy_match.py  run_iterative_v3.py  run_nn_search_matrix.py  (+4 more)
static/: app.js  style.css
task_files/: TASK_2.md  TASK_5C.md  TASK_6.md
templates/: index.html
tests/: conftest.py  factories.py  test_accommodation_barrier.py  test_agents_heuristic.py  test_animal_markets.py  test_bake_bread.py  test_card_abort_oriel.py  test_card_acorns_basket.py  test_card_acquirer.py  test_card_ale_benches.py  test_card_almsbag.py  test_card_angler.py  test_card_animal_catcher.py  test_card_animal_dealer.py  test_card_animal_driver.py  test_card_animal_tamers_apprentice.py  test_card_apiary.py  test_card_artichoke_field.py  test_card_artisan_district.py  test_card_asparagus_gift.py  test_card_asparagus_knife.py  test_card_automatic_water_trough.py  test_card_autumn_mother.py  test_card_baker.py  test_card_baking_course.py  test_card_baking_sheet.py  test_card_bale_of_straw.py  test_card_barley_mill.py  test_card_barn_cats.py  test_card_barn_shed.py  test_card_barrow_pusher.py  test_card_bartering_hut.py  test_card_baseboards.py  test_card_basket_carrier.py  test_card_beanfield.py  test_card_beating_rod.py  test_card_beaver_colony.py  test_card_bed_in_the_grain_field.py  test_card_bed_maker.py  test_card_bee_statue.py  (+576 more)
tuned_configs/: 1779441533.json  1779468329.json  1779474202.json  1779480129.json  1779485498.json  DATA_GEN_ENSEMBLE.md  alphas_gen_1.json  alphas_gen_7.json  iter2_p1_v3_food.json  (+51 more)
(+1381 files in other folders)
